@@ -3,6 +3,7 @@ package org.example.dao.impl;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 
+import org.example.constant.Color;
 import org.example.constant.Error;
 import org.example.constant.TableConfig;
 import org.example.constant.Validation;
@@ -18,6 +19,7 @@ import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Scanner;
+import java.util.stream.Collectors;
 
 import static org.example.constant.Config.ENTER_ROWS;
 import static org.example.constant.Config.REGEX_TABLE_OPTION;
@@ -29,6 +31,8 @@ public class ProductDAOImpl implements ProductDAO {
 
     Scanner scanner = new Scanner(System.in);
     List<Product> products = new ArrayList<>();
+    List<Product> insertedProduct = new ArrayList<>();
+    List<Product> updatedProduct = new ArrayList<>();
 
     // Constructor to initialize mock data
     public ProductDAOImpl() {
@@ -36,161 +40,6 @@ public class ProductDAOImpl implements ProductDAO {
         products.add(new Product("1", "Laptop", "1200.00", "10", "2023-10-01"));
         products.add(new Product("2", "Smartphone", "800.00", "25", "2023-09-15"));
         products.add(new Product("3", "Tablet", "500.00", "30", "2023-08-20"));
-    }
-
-    @Override
-    public void updateProduct() {
-        if (products.isEmpty()) {
-            System.out.println(Error.ERROR_NO_PRODUCTS);
-            return;
-        }
-
-        Product productToUpdate = null;
-        while (productToUpdate == null) {
-            // Get product ID to update
-            String productId = Validation.getValidatedInput(
-                    scanner::nextLine,
-                    value -> {
-                        if (value.isBlank()) {
-                            return new ValidationResult(false, Error.ERROR_OPTION_EMPTY);
-                        }
-                        return new ValidationResult(true, "");
-                    },
-                    "Enter the product ID to update: "
-            );
-
-            // Find the product to update
-            for (Product product : products) {
-                if (product.getId().equals(productId)) { // Use .equals() for String comparison
-                    productToUpdate = product;
-                    break;
-                }
-            }
-
-            if (productToUpdate == null) {
-                System.out.println(String.format(Error.ERROR_PRODUCT_NOT_FOUND, productId));
-            }
-        }
-
-        while (true) {
-            System.out.println("Select the field to update:");
-            System.out.println("1. Name 2. Quantity 3. Price 4. All fields 5. Exit");
-
-            // Get menu choice
-            String choiceInput = Validation.getValidatedInput(
-                    scanner::nextLine,
-                    value -> {
-                        try {
-                            int choice = Integer.parseInt(value);
-                            if (choice < 1 || choice > 5) {
-                                return new ValidationResult(false, Error.ERROR_INVALID_CHOICE);
-                            }
-                            return new ValidationResult(true, "");
-                        } catch (NumberFormatException e) {
-                            return new ValidationResult(false, Error.ERROR_INVALID_CHOICE);
-                        }
-                    },
-                    "Enter your choice: "
-            );
-            int choice = Integer.parseInt(choiceInput);
-
-            switch (choice) {
-                case 1:
-                    // Update name
-                    String newName = Validation.getValidatedInput(
-                            scanner::nextLine,
-                            value -> {
-                                if (!isValidName(value)) {
-                                    return new ValidationResult(false, Error.ERROR_INVALID_NAME);
-                                }
-                                return new ValidationResult(true, "");
-                            },
-                            "Enter new name: "
-                    );
-                    productToUpdate.setName(newName);
-                    System.out.println(Error.SUCCESS_NAME_UPDATED);
-                    TableConfig.displayProductTable(List.of(productToUpdate), 0, 1, 1, 1); // Display updated product in a table
-                    break;
-                case 2:
-                    // Update quantity
-                    String newQty = Validation.getValidatedInput(
-                            scanner::nextLine,
-                            value -> {
-                                if (!isValidQuantity(value)) {
-                                    return new ValidationResult(false, Error.ERROR_INVALID_QUANTITY);
-                                }
-                                return new ValidationResult(true, "");
-                            },
-                            "Enter new quantity: "
-                    );
-                    productToUpdate.setQuantity(newQty);
-                    System.out.println(Error.SUCCESS_QUANTITY_UPDATED);
-                    TableConfig.displayProductTable(List.of(productToUpdate), 0, 1, 1, 1); // Display updated product in a table
-                    break;
-                case 3:
-                    // Update price
-                    String newPrice = Validation.getValidatedInput(
-                            scanner::nextLine,
-                            value -> {
-                                if (!isValidPrice(value)) {
-                                    return new ValidationResult(false, Error.ERROR_INVALID_PRICE);
-                                }
-                                return new ValidationResult(true, "");
-                            },
-                            "Enter new price: "
-                    );
-                    productToUpdate.setPrice(newPrice);
-                    System.out.println(Error.SUCCESS_PRICE_UPDATED);
-                    TableConfig.displayProductTable(List.of(productToUpdate), 0, 1, 1, 1); // Display updated product in a table
-                    break;
-                case 4:
-                    // Update all fields
-                    String newNameAll = Validation.getValidatedInput(
-                            scanner::nextLine,
-                            value -> {
-                                if (!isValidName(value)) {
-                                    return new ValidationResult(false, Error.ERROR_INVALID_NAME);
-                                }
-                                return new ValidationResult(true, "");
-                            },
-                            "Enter new name: "
-                    );
-                    productToUpdate.setName(newNameAll);
-
-                    String newQtyAll = Validation.getValidatedInput(
-                            scanner::nextLine,
-                            value -> {
-                                if (!isValidQuantity(value)) {
-                                    return new ValidationResult(false, Error.ERROR_INVALID_QUANTITY);
-                                }
-                                return new ValidationResult(true, "");
-                            },
-                            "Enter new quantity: "
-                    );
-                    productToUpdate.setQuantity(newQtyAll);
-
-                    String newPriceAll = Validation.getValidatedInput(
-                            scanner::nextLine,
-                            value -> {
-                                if (!isValidPrice(value)) {
-                                    return new ValidationResult(false, Error.ERROR_INVALID_PRICE);
-                                }
-                                return new ValidationResult(true, "");
-                            },
-                            "Enter new price: "
-                    );
-                    productToUpdate.setPrice(newPriceAll);
-
-                    System.out.println(Error.SUCCESS_ALL_FIELDS_UPDATED);
-                    TableConfig.displayProductTable(List.of(productToUpdate), 0, 1, 1, 1); // Display updated product in a table
-                    break;
-                case 5:
-                    System.out.println(Error.SUCCESS_EXIT);
-                    return;
-                default:
-                    System.out.println(Error.ERROR_INVALID_CHOICE);
-            }
-        }
     }
 
     // Helper method to validate name (must start with a letter and can contain letters, numbers, and spaces)
@@ -217,7 +66,6 @@ public class ProductDAOImpl implements ProductDAO {
             return false; // Not a valid float or integer
         }
     }
-
 
     @Override
     public void writeProduct() {
@@ -383,7 +231,7 @@ public class ProductDAOImpl implements ProductDAO {
                     scanner::nextLine,
                     value -> {
                         if (value.isBlank()) {
-                            return new ValidationResult(false, Error.ERROR_OPTION_EMPTY);
+                            return new ValidationResult(false, "Input cannot be empty!");
                         }
                         return new ValidationResult(true, "");
                     },
@@ -392,27 +240,28 @@ public class ProductDAOImpl implements ProductDAO {
 
             // Allow the user to exit
             if (productName.equalsIgnoreCase("exit")) {
-                System.out.println("Search operation canceled.");
+                System.out.println("Operation canceled.");
                 return;
             }
 
-            // Find products whose names match the input (case-insensitive)
-            List<Product> matchingProducts = products.stream()
-                    .filter(p -> p.getName().toLowerCase().contains(productName.toLowerCase()))
-                    .toList();
+            // Find products by name (case-insensitive search)
+            List<Product> foundProducts = products.stream()
+                    .filter(p -> p.getName().equalsIgnoreCase(productName))
+                    .collect(Collectors.toList());
 
-            if (matchingProducts.isEmpty()) {
+            if (foundProducts.isEmpty()) {
                 System.out.println("No products found with name: " + productName);
-                System.out.println("Please try again or type 'exit' to cancel.");
+                // Display an empty table
+                TableConfig.displayProductTable(new ArrayList<>(), 0, 1, 1, 1);
             } else {
-                System.out.println("Matching products:");
-                TableConfig.displayProductTable(matchingProducts, 0, matchingProducts.size(), 1, 1); // Display matching products in a table
-                return; // Exit the loop after displaying the products
+                System.out.println("Found products:");
+                TableConfig.displayProductTable(foundProducts, 0, 1, 1, 1); // Display matching products in a table
             }
+
+            System.out.println(Color.YELLOW + "Press Enter to continue..." + Color.RESET);
+            scanner.nextLine();
         }
     }
-
-
 
     @Override
     public void setRowTable() {
@@ -435,24 +284,239 @@ public class ProductDAOImpl implements ProductDAO {
     }
 
     @Override
-    public void saveProduct() {
+    public void updateProduct() {
+        if (products.isEmpty()) {
+            System.out.println(Error.ERROR_NO_PRODUCTS);
+            return;
+        }
 
+        // Find the product to update
+        Product productToUpdate = null;
+        while (productToUpdate == null) {
+            String productId = Validation.getValidatedInput(
+                    scanner::nextLine,
+                    value -> value.isBlank() ? new ValidationResult(false, Error.ERROR_OPTION_EMPTY) : new ValidationResult(true, ""),
+                    "Enter the product ID to update: "
+            );
+
+            for (Product product : products) {
+                if (product.getId().equals(productId)) {
+                    productToUpdate = product;
+                    break;
+                }
+            }
+
+            if (productToUpdate == null) {
+                System.out.println(String.format(Error.ERROR_PRODUCT_NOT_FOUND, productId));
+            }
+        }
+
+        // Create a copy of the product to update
+        Product updatedProductCopy = new Product(
+                productToUpdate.getId(),
+                productToUpdate.getName(),
+                productToUpdate.getPrice(),
+                productToUpdate.getQuantity(),
+                productToUpdate.getDate()
+        );
+
+        // Update product fields
+        while (true) {
+            System.out.println("Select the field to update:");
+            System.out.println("1. Name 2. Quantity 3. Price 4. All fields 5. Exit");
+
+            String choiceInput = Validation.getValidatedInput(
+                    scanner::nextLine,
+                    value -> {
+                        try {
+                            int choice = Integer.parseInt(value);
+                            if (choice < 1 || choice > 5) {
+                                return new ValidationResult(false, Error.ERROR_INVALID_CHOICE);
+                            }
+                            return new ValidationResult(true, "");
+                        } catch (NumberFormatException e) {
+                            return new ValidationResult(false, Error.ERROR_INVALID_CHOICE);
+                        }
+                    },
+                    "Enter your choice: "
+            );
+            int choice = Integer.parseInt(choiceInput);
+
+            switch (choice) {
+                case 1: // Update name
+                    String newName = Validation.getValidatedInput(
+                            scanner::nextLine,
+                            value -> isValidName(value) ? new ValidationResult(true, "") : new ValidationResult(false, Error.ERROR_INVALID_NAME),
+                            "Enter new name: "
+                    );
+                    updatedProductCopy.setName(newName);
+                    System.out.println(Error.SUCCESS_NAME_UPDATED);
+                    TableConfig.displayProductTable(List.of(updatedProductCopy), 0, 1, 1, 1);
+                    break;
+
+                case 2: // Update quantity
+                    String newQty = Validation.getValidatedInput(
+                            scanner::nextLine,
+                            value -> isValidQuantity(value) ? new ValidationResult(true, "") : new ValidationResult(false, Error.ERROR_INVALID_QUANTITY),
+                            "Enter new quantity: "
+                    );
+                    updatedProductCopy.setQuantity(newQty);
+                    System.out.println(Error.SUCCESS_QUANTITY_UPDATED);
+                    TableConfig.displayProductTable(List.of(updatedProductCopy), 0, 1, 1, 1);
+                    break;
+
+                case 3: // Update price
+                    String newPrice = Validation.getValidatedInput(
+                            scanner::nextLine,
+                            value -> isValidPrice(value) ? new ValidationResult(true, "") : new ValidationResult(false, Error.ERROR_INVALID_PRICE),
+                            "Enter new price: "
+                    );
+                    updatedProductCopy.setPrice(newPrice);
+                    System.out.println(Error.SUCCESS_PRICE_UPDATED);
+                    TableConfig.displayProductTable(List.of(updatedProductCopy), 0, 1, 1, 1);
+                    break;
+
+                case 4: // Update all fields
+                    String newNameAll = Validation.getValidatedInput(
+                            scanner::nextLine,
+                            value -> isValidName(value) ? new ValidationResult(true, "") : new ValidationResult(false, Error.ERROR_INVALID_NAME),
+                            "Enter new name: "
+                    );
+                    updatedProductCopy.setName(newNameAll);
+
+                    String newQtyAll = Validation.getValidatedInput(
+                            scanner::nextLine,
+                            value -> isValidQuantity(value) ? new ValidationResult(true, "") : new ValidationResult(false, Error.ERROR_INVALID_QUANTITY),
+                            "Enter new quantity: "
+                    );
+                    updatedProductCopy.setQuantity(newQtyAll);
+
+                    String newPriceAll = Validation.getValidatedInput(
+                            scanner::nextLine,
+                            value -> isValidPrice(value) ? new ValidationResult(true, "") : new ValidationResult(false, Error.ERROR_INVALID_PRICE),
+                            "Enter new price: "
+                    );
+                    updatedProductCopy.setPrice(newPriceAll);
+
+                    System.out.println(Error.SUCCESS_ALL_FIELDS_UPDATED);
+                    TableConfig.displayProductTable(List.of(updatedProductCopy), 0, 1, 1, 1);
+                    break;
+
+                case 5: // Exit
+                    System.out.println(Error.SUCCESS_EXIT);
+                    return; // Exit the method without saving changes
+
+                default:
+                    System.out.println(Error.ERROR_INVALID_CHOICE);
+            }
+
+            // Add the updated copy to the updatedProduct list
+            updatedProduct.add(updatedProductCopy);
+            System.out.println("Product updated temporarily. Use 'saveProduct' to save changes.");
+            return; // Exit the method after updating
+        }
+    }
+
+    @Override
+    public void saveProduct() {
+        System.out.println(Color.GREEN + " 'si' " + Color.RESET + "for saving inserted products and" + Color.GREEN + " 'uu' " + Color.RESET + "for saving updated products or" + Color.RED + " 'b' " + Color.RESET);
+        System.out.println("Choose an option:");
+
+
+        String saveInput = getValidatedInput(
+                scanner::nextLine,
+                value -> {
+                    if (value.isEmpty()) {
+                        return new ValidationResult(false, "Input cannot be empty!");
+                    } else if (!value.matches("^[a-zA-Z]+$")) {
+                        return new ValidationResult(false, "Invalid input! Only characters are allowed.");
+                    }
+                    return new ValidationResult(true, "");
+                },
+                "\nEnter your option: "
+        );
+
+        switch (saveInput.toLowerCase()) {
+            case "si" -> {
+                if (insertedProduct.isEmpty()) {
+                    System.out.println("No inserted products to save.");
+                } else {
+                    products.addAll(insertedProduct); // Save inserted products
+                    insertedProduct.clear(); // Clear the temporary list
+                    System.out.println("Inserted products saved successfully.");
+                }
+            }
+            case "su" -> {
+                if (updatedProduct.isEmpty()) {
+                    System.out.println("No updated products to save.");
+                } else {
+                    // Update the main products list with changes
+                    for (Product updated : updatedProduct) {
+                        products.removeIf(p -> p.getId().equals(updated.getId())); // Remove old version
+                        products.add(updated); // Add updated version
+                    }
+                    updatedProduct.clear(); // Clear the temporary list
+                    System.out.println("Updated products saved successfully.");
+                }
+            }
+            default ->
+                    System.out.println(Color.RED + "❌ Invalid option! Please enter a valid option ('si', 'su')! Try again." + Color.RESET);
+        }
     }
 
     @Override
     public void unsavedProduct() {
+        System.out.println(Color.GREEN + " 'ui' " + Color.RESET + "for see the  inserted products and" + Color.GREEN + " 'uu' " + Color.RESET + "for see the updated products or" + Color.RED + " 'b' " + Color.RESET);
 
+        while (true) {
+            String unsavedInput = getValidatedInput(
+                    scanner::nextLine,
+                    value -> {
+                        if (value.isEmpty()) {
+                            return new ValidationResult(false, "Input cannot be empty!");
+                        } else if (!value.matches("^[a-zA-Z]+$")) {
+                            return new ValidationResult(false, "Invalid input! Only characters are allowed.");
+                        }
+                        return new ValidationResult(true, "");
+                    },
+                    "\nEnter your option: "
+            );
+
+            switch (unsavedInput.toLowerCase()) {
+                case "ui" -> {
+                    if (insertedProduct.isEmpty()) {
+                        System.out.println("No inserted products to display. Showing empty table.");
+                        TableConfig.displayUnsaveProductTable(new ArrayList<>()); // Display empty table
+                    } else {
+                        TableConfig.displayUnsaveProductTable(insertedProduct);
+                    }
+                }
+                case "uu" -> {
+                    if (updatedProduct.isEmpty()) {
+                        System.out.println("No updated products to display. Showing empty table.");
+                        TableConfig.displayUnsaveProductTable(new ArrayList<>()); // Display empty table
+                    } else {
+                        TableConfig.displayUnsaveProductTable(updatedProduct);
+                    }
+                }
+                case "b" -> {
+                    return;
+                }
+                default ->
+                        System.out.println(Color.RED + "❌ Invalid option! Please enter a valid option ('ui', 'uu', 'b')! Try again." + Color.RESET);
+            }
+
+            System.out.println(Color.YELLOW + "Press Enter to continue..." + Color.RESET);
+            scanner.nextLine();
+        }
     }
-
 
     //Bonus point
     @Override
     public void backUpDatabase() {
-
     }
 
     @Override
     public void restoreDatabase() {
-
     }
 }
